<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:background="@drawable/gradient"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/reset_my_password"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/EmailResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="#fff"
            android:textColorHint="#eee" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/ok"
            android:textColor="#C9000000" />
        <TextView
            android:id="@+id/btn_sign_up"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:onClick="NavigateSignUp"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>